# Arduino-DiceRoller

./: .gitignore  Cargo.toml  LICENSE.md  README.md  avr-atmega328p.json  uno_runner.sh
.cargo/: config.toml
.github/workflows/: ci.yml
artifacts/: nswi170-final-project.elf
src/: button.rs  dice_roller.rs  display.rs  main.rs  mini_rng.rs  stopwatch.rs
