[package]
name = "nswi170-final-project"
version = "0.1.0"
authors = ["quantumferret"]
license-file = "LICENSE.md"
readme = "README.md"
homepage = "https://github.com/quantumferret/Arduino-DiceRoller"
repository = "https://github.com/quantumferret/Arduino-DiceRoller"
keywords = ["no-std", "avr", "arduino-hal", "embedded", "dice-roller"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.arduino-hal]
git = "https://github.com/rahix/avr-hal"
branch = "main"
features = ["arduino-uno"]

[dependencies]
panic-halt = "0.2.0"
avr-device = "0.5.2"
embedded-hal = "0.2.3"

#[profile.dev.package.compiler_builtins]
#debug-assertions = false

[profile.dev]
panic = "abort"
lto = true
opt-level = "s"
overflow-checks = false

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "z"
